[package]
name = "fbihtax"
version = "0.1.0"
authors = ["Ensar Sarajčić <es.ensar@gmail.com>"]
edition = "2021"
description = "Simple CLI tool to help manage tax payments in FBiH (Bosnia and Herzegovina Federation)"


[dependencies]
clap = { version = "3.0.0-rc.0", features = ["derive"] }
pdf_forms = "0.3.4"
rust_decimal = "1.18.0"
rust_decimal_macros = "1.18.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
